--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -2,12 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-  <head th:replace="~{general/fragmentos :: head}"/>
+  <head th:replace="~{general/fragmentos :: head}">
+    <title>TechShop</title>
+  </head>
   <body>
     <header th:replace="~{general/fragmentos :: header}"/>
-    <section>
-      <h2>Esta es la tienda en línea del curso</h2>
-    </section>
+    <section th:replace="~{categoria/fragmentos :: agregar}"/>
+    <section th:replace="~{categoria/fragmentos :: listado}"/>
     <footer th:replace="~{general/fragmentos :: footer}"/>
   </body>
 </html>
