--- a/src/main/resources/templates/general/fragmentos.html
+++ b/src/main/resources/templates/general/fragmentos.html
@@ -3,42 +3,33 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:fragment="head">
-        <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png"/>
-        <link rel="icon" type="image/png" sizes="96x96" href="/fav/favicon-96x96.png"/>
-        <link rel="icon" type="image/png" sizes="256x256" href="/fav/favicon-256x256.png"/>
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-        <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
+    <title>TechShop</title>
+
+    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/fav/favicon-16x16.png}"/>
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/fav/favicon-32x32.png}"/>
+    <link rel="icon" type="image/png" sizes="96x96" th:href="@{/fav/favicon-96x96.png}"/>
+    <link rel="icon" type="image/png" sizes="256x256" th:href="@{/fav/favicon-256x256.png}"/>
+
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
+    <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
     </head>
     <body>
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm p-0">
                 <div class="container">
-                    <a th:href="@{/}" class="navbar-brand">
-                        [[#{aplicacion.titulo}]]
-                    </a>
+                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
                     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <ul class="navbar-nav">
-
-                            <li class="nav-item px-2">
-                                <a class="nav-link" th:href="@{/categoria/listado}">
-                                    [[#{plantilla.categorias}]]
-                                </a>
-                            </li>
-                            <li class="nav-item px-2">
-                                <a class="nav-link" th:href="@{/producto/listado}">
-                                    [[#{plantilla.productos}]]
-                                </a>
-                            </li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle"
                                    data-bs-toggle="dropdown"
