--- a/src/main/resources/templates/multimedia.html
+++ b/src/main/resources/templates/multimedia.html
@@ -3,6 +3,7 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
+        <link th:href="@{/css/estilos.css}" rel="stylesheet"/>
     </head>
     <body>
         <header>
