--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <body>
         <header th:replace="~{general/fragmentos :: header}"/></header>
         <section th:replace="~{consultas/fragmentos :: tabs}"/>
+        <section th:replace="~{consultas/fragmentos :: tarjetas}"/>
         <footer th:replace="~{general/fragmentos :: footer}"/></footer>
     </body>
 </html>
